extends VBoxContainer

export var correct_password = "5225"

func _on_1_pressed():
	print("1 was pressed")


func _on_2_pressed():
	print("2 was pressed")


func _on_3_pressed():
	print("3 was pressed")


func _on_4_pressed():
	print("4 was pressed")


func _on_5_pressed():
	print("5 was pressed")


func _on_6_pressed():
	print("6 was pressed")


func _on_7_pressed():
	print("7 was pressed")


func _on_8_pressed():
	print("8 was pressed")


func _on_9_pressed():
	print("9 was pressed")


func _on_pound_pressed():
	print("# was pressed")


func _on_0_pressed():
	print("0 was pressed")


func _on_asterisk_pressed():
	print("* was pressed")
